package iut.info2.tp6.exo2

interface Ajoutable {
    fun ajouter(entite: Entite)
    fun supprimer(entite: Entite)
}