package iut.info2.tp6.exo2

abstract class Entite : Salariable