package iut.info2.tp6.exo2

interface Salariable {
    fun salaire(): Double

}